--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -5,14 +5,14 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 <BaseLayout title="Resume" sideBarActiveItemID="cv">
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Profile</div>
+    <div class="text-3xl w-full font-bold">Weaver Goldman</div>
+    <div class="text-xl w-full">Computer Science Student</div>
   </div>
 
   <div class="mb-10 text-justify">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    A Computer Science, Data Science, and Robotics student at Worcester Polytechnic Institute, 
+    Weaver is focused on appling technology to create solutions to problems relating to Urban Planning, Robotics,
+    Environmental Issues, Biology, and more. 
   </div>
 
   <div class="mb-5">
@@ -21,12 +21,12 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container grid gap-4 mb-10">
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="University"
+      subtitle="2023 to 2027 at Worcester Polytechnic Institute (WPI), Worcester, MA"
     />
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="High School"
+      subtitle="2019 to 2023 at Hershey High School, Hershey, PA"
     />
   </div>
 
@@ -36,26 +36,47 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container mb-10">
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Lead Programmer for FRC Robotics Team"
+      subtitle="From July 2021 to July 2023 at FRC Team 2539"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+    <ul class="list-disc">
+      <li>Developed training pipeline and curriculum for team sustainability</li>
+      <li>Built first iteration of the team scouting app</li>
+      <li>Created telemetry dashboard application with live data and video streams</li>
+      <li>Led development of robot code for two seasons</li>
+      <li>Advocated for the formation of media, scouting, and strategy subteams</li>
+      <li>Switched robot code from Python to Java after a full rewrite test</li>
+      <li>Iterated through many autonomous and vision strategies</li>
+    </ul>
     </TimeLineElement>
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Research Assistant at Cheng Lab"
+      subtitle="From June 2021 to August 2021, at Penn State College of Medicine, Hershey, PA"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+    <ul class="list-disc">
+      <li>Built search tools for micro-CT scans of zebrafish</li>
+      <li>Analyzed and compared semi-automated and automated systems for segmenting zebrafish imaging</li>
+      <li>Used Test-Driven Development for improved software architecture</li>
+      <li>Developed algorithms for the GPU to accelerate hardware performance</li>
+      <li>Created 3D renderings of segmented zebrafish using 3DS MAX</li>
+      <li>Discussed security vulerabilities with Cyber Security Professional</li>
+      <li>Met with lab members and presented new tools and segmentation methods</li>
+    </ul>
     </TimeLineElement>
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Web Developer at Fiverr"
+      subtitle="From March 2021 to June at June 2021"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      <ul class="list-disc">
+        <li>Developed web applications and teaching tools for clients</li>
+        <li>Worked with clients on planning and negotiation</li>
+        <li>Created sustainable codebases within short timeframes</li>
+        <li>Designed data visualization widgets</li>
+      </ul>
     </TimeLineElement>
   </div>
 
-  <div class="mb-5">
+  <!-- <div class="mb-5">
     <div class="text-3xl w-full font-bold">Certifications</div>
   </div>
 
@@ -66,27 +87,28 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <li>
       <a href="#" target="_blank"> Certification Name (with link)</a>
     </li>
-  </ul>
+  </ul> -->
 
   <div class="mb-5">
     <div class="text-3xl w-full font-bold">Skills</div>
   </div>
 
   <ul class="list-disc md:columns-5 columns-2 mx-6">
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
+    <li>JavaScript</li>
+    <li>React</li>
+    <li>Electron</li>
+    <li>Python</li>
+    <li>Figma</li>
+    <li>Java</li>
+    <li>Rust</li>
+    <li>Flutter</li>
+    <li>React Native</li>
+    <li>TensorFlow</li>
+    <li>D3.js</li>
+    <li>p5.js</li>
+    <li>Node.js</li>
+    <li>TDD</li>
+    <li>Arduino</li>
+    <li>GPU</li>
   </ul>
 </BaseLayout>
