--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -8,7 +8,7 @@ const activeClass = "bg-base-300"; // For primary color replace with `active` cl
     <li><a class="py-3 text-base" id="projects" href="/projects">Projects</a></li>
     <!--<li><a class="py-3 text-base" id="services" href="/services">Services</a></li>-->
     <li><a class="py-3 text-base" id="blog" href="/blog/">Blog</a></li>
-    <!-- <li><a class="py-3 text-base" id="cv" href="/cv">CV</a></li> -->
+    <li><a class="py-3 text-base" id="cv" href="/cv">CV</a></li>
     <li>
         <a
             class="py-3 text-base"
