Added cougar-log as a project.

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -65,6 +65,13 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   />
   <div class="divider my-0"></div>
   <HorizontalCard
+    title="cougar-log"
+    img="/content/projects/cougar-log.png"
+    desc="A cli that can download (via ssh), parse, convert, and visualize WPILOG files."
+    url="https://github.com/FRC2539/cougar-log"
+  />
+  <div class="divider my-0"></div>
+  <HorizontalCard
     title="AI Racing"
     img="/content/projects/ai-racing.png"
     desc="Train and test AI racecar drivers using Tensorflow.js and p5.js."
