--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -21,6 +21,9 @@ const { title, description, image = '/social_img.png' } = Astro.props;
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
 <meta name="generator" content={Astro.generator} />
 
+<!-- Umami Tracking (privacy friendly) -->
+<script async src="https://analytics.umami.is/script.js" data-website-id="69d73ad4-50dc-4889-b0a0-147df4526b30"></script>
+
 <!-- Primary Meta Tags -->
 <title>{title}</title>
 <meta name="title" content={title} />
