Add algernon library.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,6 +27,14 @@ const last_posts = posts.slice(0, 3);
   </div>
 
   <HorizontalCard
+    title="Algernon-js"
+    img="/content/projects/algernon-js.png"
+    desc="Algernon is a JS library for efficiently generating, solving, and rendering mazes."
+    url="https://github.com/We-Gold/algernon-js"
+    badge="FOSS"
+  />
+  <div class="divider my-0"></div>
+  <HorizontalCard
     title="GPX.JS"
     img="/content/projects/gpxjs.jpg"
     desc="🗺️ GPX.js is a modern library for parsing GPX files and converting them to GeoJSON."
@@ -40,13 +48,6 @@ const last_posts = posts.slice(0, 3);
     desc="🏠 A visual analysis of a kaggle paris housing dataset, using React and d3."
     url="https://github.com/We-Gold/paris-housing-analysis"
     badge="NEW"
-  />
-  <div class="divider my-0"></div>
-  <HorizontalCard
-    title="Team 2539 - Robot Code 2023"
-    img="/content/projects/robotcode2023.jpg"
-    desc="The official codebase for team 2539's 2023 robot, Black Pearl."
-    url="https://github.com/FRC2539/javabot-2023"
   />
 
   <div>
