--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -9,6 +9,14 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   </div>
 
   <HorizontalCard
+    title="Algernon-js"
+    img="/content/projects/algernon-js.png"
+    desc="Algernon is a JS library for efficiently generating, solving, and rendering mazes."
+    url="https://github.com/We-Gold/algernon-js"
+    badge="FOSS"
+  />
+  <div class="divider my-0"></div>
+  <HorizontalCard
     title="GPX.JS"
     img="/content/projects/gpxjs.jpg"
     desc="🗺️ GPX.js is a modern library for parsing GPX files and converting them to GeoJSON."
@@ -23,19 +31,18 @@ import HorizontalCard from "../components/HorizontalCard.astro";
     url="https://github.com/We-Gold/paris-housing-analysis"
     badge="NEW"
   />
-  <div class="divider my-0"></div>
+  
+  <div>
+    <div class="text-3xl w-full font-bold mb-5 mt-10">Past Projects</div>
+  </div>
+
   <HorizontalCard
     title="Team 2539 - Robot Code 2023"
     img="/content/projects/robotcode2023.jpg"
     desc="The official codebase for team 2539's 2023 robot, Black Pearl."
     url="https://github.com/FRC2539/javabot-2023"
   />
-
-
-  <div>
-    <div class="text-3xl w-full font-bold mb-5 mt-10">Past Projects</div>
-  </div>
-
+  <div class="divider my-0"></div>
   <HorizontalCard
     title="Crop Locator Tool"
     img="/content/projects/crop-locator.png"
