Update cv page and add tinyneat.

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -64,8 +64,8 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     </ul>
     </TimeLineElement>
     <TimeLineElement
-      title="Web Developer at Fiverr"
-      subtitle="From March 2021 to June at June 2021"
+      title="Freelance Web Developer"
+      subtitle="From March 2021 to June 2021"
     >
       <ul class="list-disc">
         <li>Developed web applications and teaching tools for clients</li>
