--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,6 +27,13 @@ const last_posts = posts.slice(0, 3);
   </div>
 
   <HorizontalCard
+    title="TinyNEAT"
+    img="/content/projects/tinyneat.png"
+    desc="TinyNEAT is a simple and extensible NEAT (NeuroEvolution of Augmenting Topologies) implementation in TypeScript."
+    url="https://github.com/We-Gold/tinyneat"
+    badge="NEW"
+  />
+  <HorizontalCard
     title="Algernon-js"
     img="/content/projects/algernon-js.png"
     desc="Algernon is a JS library for efficiently generating, solving, and rendering mazes."
