--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,14 +11,14 @@ const last_posts = posts.slice(0, 3);
 <BaseLayout sideBarActiveItemID="home">
   <div class="pb-12 mt-5">
     <div class="text-5xl font-bold">Weaver Goldman</div>
-    <div class="text-3xl py-3 font-bold">CS, ML, Robotics Student</div>
+    <div class="text-3xl py-3 font-bold">CS BS + MS Student</div>
     <div class="py-2">
       <text class="text-lg">
-        Weaver is a student at WPI, who, along with the above subjects, is also passionate about Graphic Design, Urban Planning and Statistics.
+        Weaver is a student at WPI who is also passionate about Robotics, Urban Planning and Data Science.
       </text>
     </div>
     <div class="mt-8">
-      <a class="btn" href="https://www.linkedin.com/in/weaver-goldman/" target="_blank">CONNECT W/ ME!</a>
+      <a class="btn" href="https://www.linkedin.com/in/weaver-goldman/" target="_blank">CONNECT WITH ME!</a>
     </div>
   </div>
 
