--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,14 +11,31 @@ const last_posts = posts.slice(0, 3);
 <BaseLayout sideBarActiveItemID="home">
   <div class="pb-12 mt-5">
     <div class="text-5xl font-bold">Weaver Goldman</div>
-    <div class="text-3xl py-3 font-bold">CS BS/MS Student</div>
+    <div class="text-3xl py-3 font-bold">Data Science Master's & Computer Science Bachelor's Student</div>
     <div class="py-2">
       <text class="text-lg">
-        Weaver is a first-year student at WPI who is passionate about Swarm Robotics, Urban Planning and Data Science.
+        I'm Weaver, a Computer Science and Data Science student at Worcester Polytechnic Institute. I combine tech and data with biology, robotics, and more. 
       </text>
     </div>
-    <div class="mt-8">
-      <a class="btn" href="https://www.linkedin.com/in/weaver-goldman/" target="_blank">CONNECT WITH ME!</a>
+
+    <div class="py-2">
+      <text class="text-lg">
+        This summer I'm working at Medtronic on their HUGO Surgical robot. I'm building AI-powered tools for automatically debugging issues with the robot on the engineering side. 
+      </text>
+
+    <!-- <div class="py-2">
+      <text class="text-lg">
+        Besides being a tour guide, I work with the Laboratory of Spaceflight and Planetary Exploration (LSPE) at WPI. I'm building a space-mission planning web application, powered by Python, Docker, and PostgreSQL. This tool helps quickly compare many possible inter-planetary trajectories to find the ideal one based on specific mission constraints.
+      </text>
+    </div>
+
+    <div class="py-2">
+      <text class="text-lg">
+        Last summer, I built Ouroboros, a desktop app for cutting regions of interest (e.g. blood vessels, nerves) out of multi-terabyte MRI or Micro-CT scans. Research labs now produce scans too large to fit into computer memory, and this tool decreases the memory footprint of long structures like nerves from terabytes to megabytes, massively reducing the computational cost of processing these structures.
+      </text>
+    </div> -->
+    <div class="my-8">
+      <a class="btn" href="https://www.linkedin.com/in/weaver-goldman/" target="_blank">CONNECT</a>
     </div>
   </div>
 
