--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,16 +11,16 @@ const last_posts = posts.slice(0, 3);
 <BaseLayout sideBarActiveItemID="home">
   <div class="pb-12 mt-5">
     <div class="text-5xl font-bold">Weaver Goldman</div>
-    <div class="text-3xl py-3 font-bold">Data Science Master's & Computer Science Bachelor's Student</div>
+    <div class="text-3xl py-3 font-bold">Data Science Master's Student @ WPI</div>
     <div class="py-2">
       <text class="text-lg">
-        I'm Weaver, a Computer Science and Data Science student at Worcester Polytechnic Institute. I combine tech and data with biology, robotics, and more. 
+        I'm Weaver, a Data Science Master's and Computer Science Bachelor's student at Worcester Polytechnic Institute. I combine tech and data with biology, robotics, and more. 
       </text>
     </div>
 
     <div class="py-2">
       <text class="text-lg">
-        This summer I'm working at Medtronic on their HUGO Surgical robot. I'm building AI-powered tools for automatically debugging issues with the robot on the engineering side. 
+        This summer I'm working at Medtronic on their HUGO Surgical robot. I'm building AI-powered tools for automatically debugging issues with the robot.
       </text>
 
     <!-- <div class="py-2">
@@ -35,7 +35,7 @@ const last_posts = posts.slice(0, 3);
       </text>
     </div> -->
     <div class="my-8">
-      <a class="btn" href="https://www.linkedin.com/in/weaver-goldman/" target="_blank">CONNECT</a>
+      <a class="btn" href="https://www.linkedin.com/in/weaver-goldman/" target="_blank">CONNECT ON LINKEDIN</a>
     </div>
   </div>
 
