--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const last_posts = posts.slice(0, 3);
       </text>
     </div> -->
     <div class="my-8">
-      <a class="btn" href="https://www.linkedin.com/in/weaver-goldman/" target="_blank">CONNECT ON LINKEDIN</a>
+      <a class="btn hover:bg-teal-600 hover:border-teal-600 hover:text-white transition-colors duration-300" href="https://www.linkedin.com/in/weaver-goldman/" target="_blank">CONNECT ON LINKEDIN</a>
     </div>
   </div>
 
@@ -44,25 +44,24 @@ const last_posts = posts.slice(0, 3);
   </div>
 
   <HorizontalCard
-    title="SLAM Maze Explorers"
-    img="/content/projects/slam-maze-explorers.png"
-    desc="Autonomous agents collaboratively explore and escape a maze-like environment."
-    url="https://github.com/We-Gold/slam-maze-explorer"
-    badge="NEW"
+    title="Ouroboros"
+    img="/content/projects/ouroboros.png"
+    desc="A platform for extracting ROIs (e.g. nerves, blood vessels) from multi-terabyte cloud-hosted medical scans."
+    url="https://github.com/We-Gold/ds-501-cs4-public"
   />
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="TinyNEAT"
-    img="/content/projects/tinyneat.png"
-    desc="TinyNEAT is a simple and extensible NEAT (NeuroEvolution of Augmenting Topologies) implementation in TypeScript."
-    url="https://github.com/We-Gold/tinyneat"
+    title="Identifying Transit Accessibility Gaps in NYC"
+    img="/content/projects/areas_of_opportunity.png"
+    desc="In this project, my team identified areas in New York City (NYC) that are underrepresented in transit accessibility."
+    url="https://github.com/We-Gold/ds-501-cs4-public"
   />
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="Algernon-js"
-    img="/content/projects/algernon-js.png"
-    desc="Algernon is a JS library for efficiently generating, solving, and rendering mazes."
-    url="https://github.com/We-Gold/algernon-js"
+    title="GPX.JS"
+    img="/content/projects/gpxjs.jpg"
+    desc="GPX.js is a modern library for parsing GPX files and converting them to GeoJSON."
+    url="https://github.com/We-Gold/gpxjs"
   />
 
   <div>
