--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -9,11 +9,35 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   </div>
 
   <HorizontalCard
+    title="Ouroboros"
+    img="/content/projects/ouroboros.png"
+    desc="A platform for extracting ROIs (e.g. nerves, blood vessels) from multi-terabyte cloud-hosted medical scans."
+    url="https://github.com/We-Gold/ds-501-cs4-public"
+  />
+  <div class="divider my-0"></div>
+  <HorizontalCard
+    title="Identifying Transit Accessibility Gaps in NYC"
+    img="/content/projects/areas_of_opportunity.png"
+    desc="In this project, my team identified areas in New York City (NYC) that are underrepresented in transit accessibility."
+    url="https://github.com/We-Gold/ds-501-cs4-public"
+  />
+  <div class="divider my-0"></div>
+  <HorizontalCard
+    title="GPX.JS"
+    img="/content/projects/gpxjs.jpg"
+    desc="GPX.js is a modern library for parsing GPX files and converting them to GeoJSON."
+    url="https://github.com/We-Gold/gpxjs"
+  />
+  
+  <div>
+    <div class="text-3xl w-full font-bold mb-5 mt-10">Past Projects</div>
+  </div>
+
+  <HorizontalCard
     title="SLAM Maze Explorers"
     img="/content/projects/slam-maze-explorers.png"
     desc="Autonomous agents collaboratively explore and escape a maze-like environment."
     url="https://github.com/We-Gold/slam-maze-explorer"
-    badge="NEW"
   />
   <div class="divider my-0"></div>
   <HorizontalCard
@@ -29,18 +53,8 @@ import HorizontalCard from "../components/HorizontalCard.astro";
     desc="Algernon is a JS library for efficiently generating, solving, and rendering mazes."
     url="https://github.com/We-Gold/algernon-js"
   />
-  
-  <div>
-    <div class="text-3xl w-full font-bold mb-5 mt-10">Past Projects</div>
-  </div>
-
-  <HorizontalCard
-    title="GPX.JS"
-    img="/content/projects/gpxjs.jpg"
-    desc="GPX.js is a modern library for parsing GPX files and converting them to GeoJSON."
-    url="https://github.com/We-Gold/gpxjs"
-  />
   <div class="divider my-0"></div>
+
   <HorizontalCard
     title="Paris Housing Analysis"
     img="/content/projects/paris-housing.jpeg"
