Use teal color for much of the website

--- a/src/components/SideBarFooter.astro
+++ b/src/components/SideBarFooter.astro
@@ -9,7 +9,7 @@
 	<a
 		href="https://github.com/We-Gold"
 		target="_blank"
-		class="mx-3"
+		class="mx-3 hover:text-teal-500 transition-colors duration-200"
 		aria-label="Github"
 		title="Github"
 	>
@@ -29,7 +29,7 @@
 	<a
 		href="https://www.linkedin.com/in/weaver-goldman/"
 		target="_blank"
-		class="mx-3"
+		class="mx-3 hover:text-teal-500 transition-colors duration-200"
 		aria-label="Linkedin"
 		title="Linkedin"
 	>
@@ -47,7 +47,7 @@
 	<a
 		href="https://x.com/GoldMonster9"
 		target="_blank"
-		class="mx-3"
+		class="mx-3 hover:text-teal-500 transition-colors duration-200"
 		aria-label="Twitter"
 		title="Twitter"
 	>
@@ -65,7 +65,7 @@
 	<a
 		href="/rss.xml"
 		target="_blank"
-		class="mx-3"
+		class="mx-3 hover:text-teal-500 transition-colors duration-200"
 		aria-label="RSS Feed"
 		title="RSS Feed"
 	>
