Add teal border to profile image

--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -11,7 +11,7 @@ const { sideBarActiveItemID } = Astro.props;
     <div class="w-fit mx-auto mt-5 mb-6">
       <a href="/">
         <div class="avatar transition ease-in-out hover:scale-[102%] block m-auto">
-          <div class="w-[8.5rem]">
+          <div class="w-[8.5rem] p-1 border-2 border-teal-600 rounded-full">
             <Image class="mask mask-circle" aspectRatio="1:1" format="webp" width={350} height={350} src="/profile.jpeg" alt="Profile image" />
           </div>
         </div>
